--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
-    "eslint": "^6.4.0"
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
