--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-images/
+uploads/
 
 # TypeScript v1 declaration files
 typings/
